# pydropsonde

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.md  _version.py  api.html  dropsonde.cfg  environment.yaml  environment.yml  genindex.html  halodrops.cfg  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinx_requirements.txt
.doctrees/: CONTRIBUTING.doctree  api.doctree  environment.pickle  index.doctree
.doctrees/_autosummary/: pydropsonde.circles.doctree  pydropsonde.doctree  pydropsonde.helper.doctree  pydropsonde.helper.paths.doctree  pydropsonde.helper.physics.doctree  pydropsonde.helper.quality.doctree  pydropsonde.helper.rawreader.doctree  pydropsonde.helper.xarray_helper.doctree  pydropsonde.main.doctree  pydropsonde.pipeline.doctree  pydropsonde.processor.doctree
.doctrees/data/: index.doctree  level0.doctree  level1.doctree  level2.doctree  level3.doctree
.doctrees/tutorial/: configs.doctree  index.doctree  installation.doctree  run.doctree
.github/workflows/: build_and_deploy.yml  python-package.yml
_autosummary/: pydropsonde.circles.html  pydropsonde.helper.html  pydropsonde.helper.paths.html  pydropsonde.helper.physics.html  pydropsonde.helper.quality.html  pydropsonde.helper.rawreader.html  pydropsonde.helper.xarray_helper.html  pydropsonde.html  pydropsonde.main.html  pydropsonde.pipeline.html  pydropsonde.processor.html
_sources/: CONTRIBUTING.rst  api.rst  index.rst
_sources/_autosummary/: pydropsonde.circles.rst  pydropsonde.helper.paths.rst  pydropsonde.helper.physics.rst  pydropsonde.helper.quality.rst  pydropsonde.helper.rawreader.rst  pydropsonde.helper.rst  pydropsonde.helper.xarray_helper.rst  pydropsonde.main.rst  pydropsonde.pipeline.rst  pydropsonde.processor.rst  pydropsonde.rst
_sources/data/: level1.rst  level2.rst  level3.rst
_sources/tutorial/: index.rst  run.rst
data/: index.html  level0.html  level1.html  level2.html  level3.html
docs/source/: CONTRIBUTING.md  CONTRIBUTING.rst  conf.py  index.md  index.rst
docs/source/apidocs/: index.rst
docs/source/apidocs/halodrops/: halodrops.helper.md  halodrops.helper.paths.md  halodrops.helper.performance.md  halodrops.helper.rawreader.md  halodrops.md  halodrops.qc.md  halodrops.qc.profile.md  halodrops.sonde.md
docs/source/apidocs/src/: src.halodrops.md  src.halodrops.sonde.md  src.md
docs/source/data/: index.rst  level0.rst  level1.rst  level3.rst  qc.rst
docs/source/explanation/: for_developers.md  index.md  performance_of_sondes.md  reconditioning.md
docs/source/handbook/: directory_structure.md  index.md
docs/source/handbook/data/: data_directory_structure.md  index.md
docs/source/handbook/operations/: in_flight.md  index.md  ip_address_setup.md  pre_flight.md  switching_on.md
docs/source/howto/: index.md  list_failed_sondes.ipynb  qc.ipynb
docs/source/tutorial/: configs.rst  index.md  index.rst  installation.md  installation.rst  run.rst
example_data/: example_seg_simple.yml
example_data/HALO/20200119/Level_0/: 0_SysLog_20200119_155608.csv  1_Aircraft_20200119_155829.txt  2_GPSRef_20200119_155829.txt  3_SpecAnlyzr_20200119_155828.txt  D20200119_165514.1  D20200119_165514_P.1  R20200119_165514.1
example_data/HALO/20200119/Level_1/: D20200119_165514QC.nc
example_data/HALO/20200122/Level_0/: 0_SysLog_20200122_150344.csv  3_SpecAnlyzr_20200122_150708.txt  C20200122_152307.2.csv  D20200122_151815.1  D20200122_152307.2  D20200122_152307_P.2  R20200122_151815.1  R20200122_152307.2
example_data/HALO/20200122/Level_1/: D20200122_152307QC.nc
example_data/HALO/Level_0/20200119/: A20200119_165514.1  B20200119_165514.1  C20200119_165514.1.csv
example_data/HALO/Level_0/20200122/: A20200122_151815.1  A20200122_152307.2  B20200122_151815.1  B20200122_152307.2  C20200122_151815.1.csv  D20200122_151815_P.1
example_data/HALO/Level_0/HALO-20240818a/: A20240818_112450.1.txt  A20240818_113055.2.txt  A20240818_114903.6.txt  A20240818_142816.1.txt  A20240818_143151.2.txt  A20240818_143614.3.txt  D20240818_112450.1.txt  D20240818_113055.2.txt  D20240818_114903.6.txt  D20240818_142816.1.txt  D20240818_143151.2.txt  D20240818_143614.3.txt
example_data/HALO/Level_0/HALO-20240926a/: A20240926_144952.1.txt  A20240926_192339.6  A20240926_192818.7  D20240926_144952.1.txt  D20240926_192339.6  D20240926_192818.7
example_data/HALO/Level_1/20200119/: D20200119_165514QC.nc
example_data/HALO/Level_1/20200122/: D20200122_151815QC.nc  D20200122_152307QC.nc
example_data/HALO/Level_1/HALO-20240818a/: D20240818_112450QC.nc  D20240818_113055QC.nc  D20240818_114903QC.nc  D20240818_142816QC.nc  D20240818_143151QC.nc  D20240818_143614QC.nc
example_data/HALO/Level_1/HALO-20240926a/: D20240926_144952QC.nc  D20240926_192339QC.nc  D20240926_192818QC.nc
pydropsonde/: __init__.py  circles.py  main.py  pipeline.py  processor.py
pydropsonde/helper/: __init__.py  paths.py  physics.py  quality.py  rawreader.py  xarray_helper.py
src/: sonde.py
src/halodrops/: __init__.py  pipeline.py  processor.py  sonde.py
src/halodrops/api/: qc.py
src/halodrops/helper/: __init__.py  paths.py  rawreader.py  rd41.CONFIG
src/halodrops/qc/: profile.py
tests/: test_gridded.py  test_helper.py  test_inspect_function.py  test_lev3.py  test_paths.py  test_qc.py  test_sonde.py
tutorial/: configs.html  index.html  installation.html  run.html
(+15 files in other folders)
