[tool.poetry]
name = "pydropsonde"
version = "0"
description = "Tools to process dropsonde data"
authors = ["Geet George <geet.george@mpimet.mpg.de>"]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
packages = [{include = "pydropsonde"}]

[tool.poetry.dependencies]
python = ">=3.10"

numpy = "*"
llvmlite = ">=0.40"
numba = ">=0.50"
xarray = "*"
metpy = "*"
scipy = "*"
pyproj = "*"
pandas = "*"
bottleneck = "*"
matplotlib = "*"
netcdf4 = "*"
seaborn = "*"
cmocean = "*"
tqdm = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-watch = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.scripts]
pydropsonde = 'pydropsonde:main'

[tool.poetry-dynamic-versioning.files."pydropsonde/_version.py"]
persistent-substitution = true
initial-content ="""
  TYPE_CHECKING = False
  if TYPE_CHECKING:
      from typing import Tuple, Union
      VERSION_TUPLE = Tuple[Union[int, str], ...]
  else:
      VERSION_TUPLE = object

  version: str
  __version__: str
  __version_tuple__: VERSION_TUPLE
  version_tuple: VERSION_TUPLE

  __version__ = '0.0.0'
  __version_tuple__ = (0, 0, 0)
  """


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
